# vv

./: .gitignore  CLAUDE.md  README.md  install.sh  pyproject.toml
tests/: conftest.py  test_agents.py  test_cli.py  test_cmux_ops.py  test_config.py  test_gh_ops.py  test_git_ops.py  test_names.py  test_remote.py  test_tmux_ops.py
vv/: __init__.py  agents.py  cli.py  cmux_ops.py  config.py  gh_ops.py  git_ops.py  names.py  remote.py  spike.py  tmux_ops.py
