[project]
name = "vv"
version = "0.1.0"
description = "Spin up disposable git worktree + tmux + agent CLI sessions"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "typer>=0.12",
    "questionary>=2.0",
]

[project.scripts]
vv = "vv.cli:run"

[dependency-groups]
dev = [
    "pytest>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
